feat: add endpoints for top investment and mortgage rates, enhance quote sorting logic